# mgc-sdk-python

./: Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
src/mgc/: auth.py  client.py  config.py  region.py  transport.py
src/mgc/resources/compute/: backups.py  compute.py  images.py  machine_types.py  snapshots.py  virtual_machines.py
tests/: test_client.py  test_config.py  test_region.py  test_transport.py
tests/resources/compute/: conftest.py  test_backups.py  test_compute.py  test_images.py  test_machine_types.py  test_snapshots.py  test_virtual_machines.py
