[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mgc-sdk-python"
version = "0.0.1"

description = "Unofficial Python SDK for Magalu Cloud"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [
    { name = "Kayque Govetri" }
]

license = "Apache-2.0"

keywords = [
    "magalu",
    "magalu-cloud",
    "cloud",
    "sdk",
    "api",
    "compute",
    "virtual-machine",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[project.urls]
Homepage = "https://github.com/kayqueGovetri/mgc-sdk-python"
Repository = "https://github.com/kayqueGovetri/mgc-sdk-python"
Issues = "https://github.com/kayqueGovetri/mgc-sdk-python/issues"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[tool.setuptools.packages.find]
include = ["mgc*"]
